--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-hook-form": "^7.45.1",
     "typescript": "5.0.4",
     "vite": "^5.0.12",
-    "yup": "1.0.2"
+    "yup": "1.0.2",
+    "react-router-dom": "^6.14.0"
   },
   "peerDependencies": {
     "@emotion/react": "11.11.1",
