--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@hookform/resolvers": "^3.1.1",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "5.16.7",
     "@mui/x-charts": "7.6.1",
     "@mui/x-data-grid": "7.6.2",
     "@mui/x-date-pickers": "7.6.2",
