--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-router-dom": "^6.14.0",
     "typescript": "5.0.4",
     "vite": "^5.0.12",
-    "yup": "1.0.2",
-    "react-router-dom": "^6.14.0"
+    "yup": "1.0.2"
   },
   "peerDependencies": {
     "@emotion/react": "11.11.1",
@@ -54,19 +54,19 @@
     "@mui/material": "5.16.7",
     "@mui/x-charts": "7.6.1",
     "@mui/x-data-grid": "7.6.2",
-    "@mui/x-date-pickers": "7.6.2"
+    "@mui/x-date-pickers": "7.6.2",
+    "dayjs": "^1.11.8"
   },
   "devDependencies": {
-    "@storybook/addon-controls": "7.5.2",
-    "@storybook/addon-essentials": "^8.1.5",
-    "@storybook/addon-interactions": "^8.1.5",
+    "@storybook/addon-actions": "^8.2.9",
+    "@storybook/addon-controls": "^8.2.9",
+    "@storybook/addon-docs": "^8.2.9",
     "@storybook/addon-links": "^8.1.5",
-    "@storybook/addon-onboarding": "^8.1.5",
     "@storybook/addon-themes": "^8.1.5",
     "@storybook/addon-viewport": "^8.1.5",
-    "@storybook/blocks": "^8.1.5",
-    "@storybook/react": "^8.1.5",
-    "@storybook/react-vite": "^8.1.5",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.2.0",
@@ -92,7 +92,7 @@
     "node-fetch": "^3.3.2",
     "pre-commit": "^1.2.2",
     "prettier": "^2.8.8",
-    "storybook": "^7.5.2",
+    "storybook": "^8.2.9",
     "vite-plugin-dts": "^3.9.1",
     "vitest": "^1.2.0"
   },
